Only thing left on the client side is the main()

--- a/Messager/Messager.vcxproj
+++ b/Messager/Messager.vcxproj
@@ -134,6 +134,7 @@
     <ClInclude Include="ThreadPool.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="client.cpp" />
     <ClCompile Include="messager.cpp" />
     <ClCompile Include="socket.cpp" />
   </ItemGroup>
