--- a/Messager/Messager.vcxproj.filters
+++ b/Messager/Messager.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="messager.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="client.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
