--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -123,7 +123,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\Messager\ThreadPool.h" />
+    <ClInclude Include="chatroom.h" />
     <ClInclude Include="common.h" />
+    <ClInclude Include="Person.h" />
+    <ClInclude Include="Server.h" />
+    <ClInclude Include="ServerSocket.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
